<resources>
    <string name="app_name">Calculator</string>
    <string name="button_reverce_text">+/-</string>
    <string name="button_zero_text">0</string>
    <string name="button_dot_text">,</string>
    <string name="button_result_text">=</string>
    <string name="button_one_text">1</string>
    <string name="button_two_text">2</string>
    <string name="button_three_text">3</string>
    <string name="button_plus_text">+</string>
    <string name="button_four_text">4</string>
    <string name="button_five_text">5</string>
    <string name="button_six_text">6</string>
    <string name="button_minus_text">-</string>
    <string name="button_eight_text">8</string>
    <string name="button_seven_text">7</string>
    <string name="button_nine_text">9</string>
    <string name="button_multy_text">x</string>
    <string name="button_remember_text">ME</string>
    <string name="button_delete_text">DEL</string>
    <string name="button_devision_text">/</string>
</resources>
